[gd_scene load_steps=4 format=3 uid="uid://by7bmxpp32t0y"]

[ext_resource type="Script" uid="uid://6l5gignbame2" path="res://scenes/main_menu/main_menu.gd" id="1_fsom3"]
[ext_resource type="Texture2D" uid="uid://d0lxl7pf4ypax" path="res://assets/sprites/button_on.png" id="2_0ebjn"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ob46e"]
load_path = "res://.godot/imported/button_off.png-d76bd09e056907e115136c27a6154f5d.ctex"

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fsom3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 343.0
offset_bottom = 164.0
alignment = 1

[node name="title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "My Awesome Game"

[node name="play_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Play"
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="sound_text" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Sound"

[node name="button_off" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("CompressedTexture2D_ob46e")

[node name="button_on" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_0ebjn")

[connection signal="pressed" from="VBoxContainer/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/button_off" to="." method="_on_button_off_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/button_on" to="." method="_on_button_on_pressed"]
